--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "seed:users": "ts-node-dev ./src/shared/infra/typeorm/seed/users.ts"
+    "seed": "ts-node-dev ./src/shared/infra/typeorm/seed/index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "oracledb": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
